ignore sqlite databases

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*.sqlite
+*.sqlite3
+
 *.o
 *.a
 *.pyc
@@ -12,9 +15,6 @@
 *.bak
 [Tt]humbs.db
 *.DS_Store
-build/
-_build/
-src/build/
 *.log
 
 # Don't ignore this file itself
