--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,8 +1,24 @@
 [package]
-name = "fc"
+name = "fatcat"
 version = "0.1.0"
 authors = ["Bryan Newbold <bnewbold@archive.org>"]
 
 [dependencies]
 diesel = { version = "1.0.0", features = ["postgres"] }
 dotenv = "0.9.0"
+clap = "*"
+
+# API server
+chrono = { version = "0.4", features = ["serde"] }
+futures = "0.1"
+hyper = "0.10"
+#hyper-openssl = "0.2"
+iron = "0.5"
+iron-slog = "*"
+iron-test = "*"
+swagger = "0.7"
+
+# TODO
+#sentry = "*"
+#cadence = "*"
+#frank_jwt = "*"
