--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -17,12 +17,16 @@ error-chain = "0.11"
 chrono = { version = "0.4", features = ["serde"] }
 futures = "0.1"
 hyper = "0.10"
-#hyper-openssl = {version = "0.2", optional = true}
-#hyper-tls = {version = "0.1.2", optional = true}
 iron = "0.5"
 iron-slog = "*"
 iron-test = "*"
 swagger = "0.7"
+slog = "^2.0"
+slog-term = "*"
+slog-async = "*"
+
+#hyper-openssl = {version = "0.2", optional = true}
+#hyper-tls = {version = "0.1.2", optional = true}
 #tokio-core = "0.1.6"
 #tokio-proto = "0.1.1"
 
