--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -12,6 +12,8 @@ diesel = { version = "1.0.0", features = ["postgres"] }
 dotenv = "0.9.0"
 clap = "*"
 error-chain = "0.11"
+r2d2 = "*"
+r2d2-diesel = "*"
 
 # API server
 chrono = { version = "0.4", features = ["serde"] }
