--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,11 +8,12 @@ members = ["fatcat-api"]
 
 [dependencies]
 fatcat-api = {version = "*", path = "fatcat-api"}
-diesel = { version = "1.2", features = ["postgres", "extras"] }
+diesel = { version = "1.2", features = ["postgres", "extras", "uuid"] }
 dotenv = "0.9.0"
 clap = "*"
 error-chain = "0.11"
-r2d2 = "*"
+r2d2 = "0.8"
+uuid = "0.5"
 
 # API server
 chrono = { version = "0.4", features = ["serde"] }
