move python code to subdirectory

--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,7 @@ golang/fatcatd
 *.DS_Store
 *.log
 
-!.coveragerc
 !.gitlab-ci.yml
-!.pylintrc
 
 # Don't ignore this file itself
-!.gitignore
+:Q!.gitignore
