--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,24 @@
-image: python:3.6-stretch
-before_script:
-  - apt update -qy
-  - apt install -y python3-dev python3-pip python3-wheel
-  - pip3 install pipenv
-  - pipenv --version
 
-unittest_and_lint:
+rust_build:
+  image: "rust:1.26-stretch"
+  services:
+    - "postgres:9.6"
+  before_script:
+    - cargo install diesel_cli
   script:
+    - cd rust
+    - rustc --version && cargo --version
+    - cargo build
+
+python_unittest_and_lint:
+  image: python:3.6-stretch
+  before_script:
+    - apt update -qy
+    - apt install -y python3-dev python3-pip python3-wheel
+    - pip3 install pipenv
+    - pipenv --version
+  script:
+    - cd python
     - pipenv install --dev --deploy
     - pipenv run pytest --cov
     - pipenv run pylint --disable bad-continuation,arguments-differ,unidiomatic-typecheck fatcat
