minor tweaks to API spec

--- a/rust/fatcat-api/api.yaml
+++ b/rust/fatcat-api/api.yaml
@@ -95,7 +95,7 @@ definitions:
     type: object
     required:
       - title
-      - work
+      - work_id
     properties:
       <<: *ENTITYPROPS
       title:
