--- a/rust/fatcat-api/api.yaml
+++ b/rust/fatcat-api/api.yaml
@@ -7,7 +7,7 @@ info:
   version: 0.1.0
 schemes: [http]
 basePath: /v0
-host: api.fatcat.wiki
+#host: api.fatcat.wiki
 consumes:
   - application/json
 produces:
@@ -22,22 +22,30 @@ x-entity-props: &ENTITYPROPS
   ident:
     type: string
     #format: uuid
+    example: "f1f046a3-45c9-4b99-adce-000000000001"
   revision:
     type: integer
+    example: 42
   redirect:
     type: string
     #format: uuid
-  editgroup:
+    example: "f1f046a3-45c9-4b99-adce-000000000002"
+  editgroup_id:
     type: integer
+    example: 16
 x-entity-edit-props: &ENTITYEDITPROPS
   edit_id:
     type: integer
+    example: 847
   ident:
     type: string
+    example: "f1f046a3-45c9-4b99-adce-000000000001"
   revision:
     type: integer
+    example: 42
   editgroup_id:
     type: integer
+    example: 16
 
 
 definitions:
@@ -48,6 +56,7 @@ definitions:
     properties:
       message:
         type: string
+        example: "A really confusing, totally unexpected thing happened"
   success:
     type: object
     required:
@@ -55,6 +64,7 @@ definitions:
     properties:
       message:
         type: string
+        example: "The computers did the thing successfully!"
   creator_entity:
     type: object
     required:
@@ -63,9 +73,11 @@ definitions:
       <<: *ENTITYPROPS
       name:
         type: string
+        example: "Grace Hopper"
       orcid:
         type: string
         #format: custom
+        example: "0000-0002-1825-0097"
   container_entity:
     type: object
     required:
@@ -74,23 +86,29 @@ definitions:
       <<: *ENTITYPROPS
       name:
         type: string
+        example: "Journal of Important Results"
       publisher:
         type: string
+        example: "Society of Curious Students"
       issn:
         type: string
         #format: custom
+        example: "1234-5678"
   file_entity:
     type: object
     properties:
       <<: *ENTITYPROPS
       size:
         type: integer
+        example: 1048576
       sha1:
         type: string
         #format: custom
+        example: "f013d66c7f6817d08b7eb2a93e6d0440c1f3e7f8"
       url:
         type: string
         format: url
+        example: "https://example.edu/~frau/prcding.pdf"
   release_entity:
     type: object
     required:
@@ -102,21 +120,26 @@ definitions:
         type: string
       work_id:
         type: string
+        example: "f1f046a3-45c9-4b99-adce-000000000001"
       container_id:
         type: string
+        example: "f1f046a3-45c9-4b99-adce-000000000001"
       release_type:
         type: string
+        example: "preprint"
       date:
         type: date
       doi:
         type: string
         #format: custom
+        example: "10.1234/abcde.789"
       volume:
         type: string
       pages:
         type: string
       issue:
         type: string
+        example: "12"
   work_entity:
     type: object
     properties:
@@ -134,6 +157,7 @@ definitions:
     properties:
       username:
         type: string
+        example: "zerocool93"
   editgroup:
     type: object
     required:
