--- a/rust/fatcat-api/api.yaml
+++ b/rust/fatcat-api/api.yaml
@@ -26,6 +26,7 @@ x-entity-props: &ENTITYPROPS
   revision:
     type: integer
     example: 42
+    format: int64
   redirect:
     type: string
     #format: uuid
@@ -33,19 +34,23 @@ x-entity-props: &ENTITYPROPS
   editgroup_id:
     type: integer
     example: 16
+    format: int64
 x-entity-edit-props: &ENTITYEDITPROPS
   edit_id:
     type: integer
     example: 847
+    format: int64
   ident:
     type: string
     example: "f1f046a3-45c9-4b99-adce-000000000001"
   revision:
     type: integer
     example: 42
+    format: int64
   editgroup_id:
     type: integer
     example: 16
+    format: int64
 
 
 definitions:
@@ -101,6 +106,7 @@ definitions:
       size:
         type: integer
         example: 1048576
+        format: int64
       sha1:
         type: string
         #format: custom
@@ -165,11 +171,55 @@ definitions:
     properties:
       id:
         type: integer
+        format: int64
       editor_id:
         type: integer
+        format: int64
       description:
         type: string
-      # TODO: work_edits array, etc. ["edits"]["work"] or ["work_edits"]?
+      container_edits:
+        type: array
+        item:
+          type: integer
+          format: int64
+#         properties:
+#           edit_id:
+#             type: integer
+#             example: 847
+#             format: int64
+#       type: array
+#       items:
+#         type: object
+#         proposeties:
+#           <<: *ENTITYEDITPROPS
+#         creators:
+#           type: array
+#           items:
+#             type: object
+#             proposeties:
+#               <<: *ENTITYEDITPROPS
+#         files:
+#           type: array
+#           items:
+#             type: object
+#             proposeties:
+#               <<: *ENTITYEDITPROPS
+#         releases:
+#           type: array
+#           items:
+#             type: object
+#             proposeties:
+#               <<: *ENTITYEDITPROPS
+#         works:
+#           type: array
+#           items:
+#             type: object
+#             proposeties:
+#               <<: *ENTITYEDITPROPS
+      extra:
+        type: object
+        additionalProperties:
+          type: string
   changelogentries:
     type: array
     items:
@@ -181,8 +231,10 @@ definitions:
       properties:
         index:
           type: integer
+          format: int64
         editgroup_id:
           type: integer
+          format: int64
         timestamp:
           type: string
           format: date-time
@@ -455,6 +507,7 @@ paths:
       - name: id
         in: path
         type: integer
+        format: int64
         required: true
     get:
       responses:
@@ -479,6 +532,7 @@ paths:
       - name: id
         in: path
         type: integer
+        format: int64
         required: true
     post:
       responses:
