--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
 rust_test:
   image: "rust:1.26-stretch"
   variables:
-    DATABASE_URL: "postgres://postgres@localhost/fatcat_test"
+    TEST_DATABASE_URL: "postgres://postgres@localhost/fatcat_test"
   services:
     - "postgres:9.6"
   before_script:
@@ -12,7 +12,7 @@ rust_test:
     - cd rust
     - diesel database reset && diesel migration run
     - cargo build
-    - cargo test
+    - cargo test -- --test-threads 1
 
 rust_build_release:
   only:
