API schema: serde_json::Value
Unfortunately, this requires hacking model.rs manually. Might be able to
partially mitigate with, eg, sed.

--- a/rust/fatcat-api/api.yaml
+++ b/rust/fatcat-api/api.yaml
@@ -218,8 +218,7 @@ definitions:
 #               <<: *ENTITYEDITPROPS
       extra:
         type: object
-        additionalProperties:
-          type: string
+        additionalProperties: {}
   changelogentries:
     type: array
     items:
