fix date on release

--- a/rust/fatcat-api/api.yaml
+++ b/rust/fatcat-api/api.yaml
@@ -145,7 +145,8 @@ definitions:
         type: string
         example: "preprint"
       date:
-        type: date
+        type: string
+        format: date
       doi:
         type: string
         #format: custom
