fix another CI typo

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,8 @@ rust_test:
     POSTGRES_DB: "fatcat_test"
     POSTGRES_USER: "fatcat_user"
     POSTGRES_PASSWORD: "fatcat_pw"
-    DATABASE_URL: "postgres://fatcat_user:fatcat_pw:@postgres/fatcat_test"
-    TEST_DATABASE_URL: "postgres://fatcat_user:fatcat_pw:@postgres/fatcat_test"
+    DATABASE_URL: "postgres://fatcat_user:fatcat_pw@postgres/fatcat_test"
+    TEST_DATABASE_URL: "postgres://fatcat_user:fatcat_pw@postgres/fatcat_test"
   services:
     - "postgres:9.6"
   before_script:
