--- a/rust/fatcat-api/api.yaml
+++ b/rust/fatcat-api/api.yaml
@@ -302,6 +302,7 @@ x-entity-responses: &ENTITYRESPONSES
 paths:
   /container:
     post:
+      operationId: "create_container"
       parameters:
         - name: entity
           in: body
@@ -316,6 +317,7 @@ paths:
         <<: *ENTITYRESPONSES
   /container/batch:
     post:
+      operationId: "create_container_batch"
       parameters:
         - name: entity_list
           in: body
@@ -339,6 +341,7 @@ paths:
         type: string
         required: true
     get:
+      operationId: "get_container"
       responses:
         200:
           description: Found Entity
@@ -347,6 +350,7 @@ paths:
         <<: *ENTITYRESPONSES
   /container/lookup:
     get:
+      operationId: "lookup_container"
       parameters:
         - name: issnl
           in: query
@@ -360,6 +364,7 @@ paths:
         <<: *ENTITYRESPONSES
   /creator:
     post:
+      operationId: "create_creator"
       parameters:
         - name: entity
           in: body
@@ -374,6 +379,7 @@ paths:
         <<: *ENTITYRESPONSES
   /creator/batch:
     post:
+      operationId: "create_creator_batch"
       parameters:
         - name: entity_list
           in: body
@@ -397,6 +403,7 @@ paths:
         type: string
         required: true
     get:
+      operationId: "get_creator"
       responses:
         200:
           description: Found Entity
@@ -405,6 +412,7 @@ paths:
         <<: *ENTITYRESPONSES
   /creator/lookup:
     get:
+      operationId: "lookup_creator"
       parameters:
         - name: orcid
           in: query
@@ -418,6 +426,7 @@ paths:
         <<: *ENTITYRESPONSES
   /file:
     post:
+      operationId: "create_file"
       parameters:
         - name: entity
           in: body
@@ -432,6 +441,7 @@ paths:
         <<: *ENTITYRESPONSES
   /file/batch:
     post:
+      operationId: "create_file_batch"
       parameters:
         - name: entity_list
           in: body
@@ -455,6 +465,7 @@ paths:
         type: string
         required: true
     get:
+      operationId: "get_file"
       responses:
         200:
           description: Found Entity
@@ -463,6 +474,7 @@ paths:
         <<: *ENTITYRESPONSES
   /file/lookup:
     get:
+      operationId: "lookup_file"
       parameters:
         - name: sha1
           in: query
@@ -476,6 +488,7 @@ paths:
         <<: *ENTITYRESPONSES
   /release:
     post:
+      operationId: "create_release"
       parameters:
         - name: entity
           in: body
@@ -490,6 +503,7 @@ paths:
         <<: *ENTITYRESPONSES
   /release/batch:
     post:
+      operationId: "create_release_batch"
       parameters:
         - name: entity_list
           in: body
@@ -513,6 +527,7 @@ paths:
         type: string
         required: true
     get:
+      operationId: "get_release"
       responses:
         200:
           description: Found Entity
@@ -521,6 +536,7 @@ paths:
         <<: *ENTITYRESPONSES
   /release/lookup:
     get:
+      operationId: "lookup_release"
       parameters:
         - name: doi
           in: query
@@ -534,6 +550,7 @@ paths:
         <<: *ENTITYRESPONSES
   /work:
     post:
+      operationId: "create_work"
       parameters:
         - name: entity
           in: body
@@ -548,6 +565,7 @@ paths:
         <<: *ENTITYRESPONSES
   /work/batch:
     post:
+      operationId: "create_work_batch"
       parameters:
         - name: entity_list
           in: body
@@ -571,6 +589,7 @@ paths:
         type: string
         required: true
     get:
+      operationId: "get_work"
       responses:
         200:
           description: Found Entity
@@ -584,6 +603,7 @@ paths:
         type: string
         required: true
     get:
+      operationId: "get_editor"
       responses:
         200:
           description: Found Editor
@@ -604,6 +624,7 @@ paths:
         type: string
         required: true
     get:
+      operationId: "get_editor_changelog"
       responses:
         200:
           description: Found Merged Changes
@@ -619,6 +640,7 @@ paths:
             $ref: "#/definitions/error_response"
   /editgroup:
     post:
+      operationId: "create_editgroup"
       parameters:
         - name: entity
           in: body
@@ -646,6 +668,7 @@ paths:
         format: int64
         required: true
     get:
+      operationId: "get_editgroup"
       responses:
         200:
           description: Found Entity
@@ -671,6 +694,7 @@ paths:
         format: int64
         required: true
     post:
+      operationId: "accept_editgroup"
       responses:
         200:
           description: Merged Successfully
