uuids in flask routes

--- a/python/Pipfile
+++ b/python/Pipfile
@@ -22,6 +22,7 @@ raven = "*"
 flask-sqlalchemy = "*"
 marshmallow-sqlalchemy = "*"
 flask-marshmallow = "*"
+flask-uuid = "*"
 "psycopg2" = "*"
 
 [requires]
