--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,9 @@
 
-rust_test:
+unified_test:
   image: "rust:1.26-stretch"
   variables:
+    LC_ALL: "C.UTF-8"
+    LANG: "C.UTF-8"
     POSTGRES_DB: "fatcat_test"
     POSTGRES_USER: "fatcat_user"
     POSTGRES_PASSWORD: "fatcat_pw"
@@ -11,12 +13,22 @@ rust_test:
     - "postgres:9.6"
   before_script:
     - cargo install diesel_cli --version 1.3.1
+    - apt update -qy
+    - apt install -y python3-dev python3-pip python3-wheel
+    - pip3 install pipenv
+    - pipenv --version
   script:
     - rustc --version && cargo --version && diesel --version
     - cd rust
     - diesel database reset && diesel migration run
     - cargo build
     - cargo test -- --test-threads 1
+    - cargo run &
+    - cd ../python
+    - pipenv install --dev --deploy
+    - pipenv run pytest --cov
+    # Still too rigorous
+    #- pipenv run pylint --disable bad-continuation,arguments-differ,unidiomatic-typecheck fatcat
 
 rust_build_release:
   only:
@@ -37,16 +49,3 @@ rust_build_release:
     - rust/target/doc/*.svg
     expire_in: 1 year
 
-python_unittest_and_lint:
-  image: python:3.6-stretch
-  before_script:
-    - apt update -qy
-    - apt install -y python3-dev python3-pip python3-wheel
-    - pip3 install pipenv
-    - pipenv --version
-  script:
-    - cd python
-    - pipenv install --dev --deploy
-    - pipenv run pytest --cov
-    # Still too rigorous
-    #- pipenv run pylint --disable bad-continuation,arguments-differ,unidiomatic-typecheck fatcat
