--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -20,7 +20,7 @@ chrono = { version = "0.4", features = ["serde"] }
 futures = "0.1"
 hyper = "0.10"
 iron = "0.6"
-iron-slog = { git = "https://github.com/bnewbold/iron-slog", branch = "bnewbold-iron-0.6" }
+iron-slog = "0.0.2"
 iron-test = "*"
 swagger = "0.7"
 slog = "^2.0"
