implement (most) of stats endpoint

--- a/rust/fatcat-api/api.yaml
+++ b/rust/fatcat-api/api.yaml
@@ -39,7 +39,6 @@ x-entity-props: &ENTITYPROPS
     type: object
     additionalProperties: {}
 
-
 definitions:
   error_response:
     type: object
@@ -312,6 +311,12 @@ definitions:
         type: string
       role:
         type: string
+  stats_response:
+    type: object
+    properties:
+      extra:
+        type: object
+        additionalProperties: {}
 
 x-entity-responses: &ENTITYRESPONSES
   400:
@@ -784,6 +789,23 @@ paths:
           description: Not Found
           schema:
             $ref: "#/definitions/error_response"
+        default:
+          description: Generic Error
+          schema:
+            $ref: "#/definitions/error_response"
+  /stats:
+    get:
+      operationId: "get_stats"
+      parameters:
+        - name: more
+          in: query
+          type: string
+          required: false
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/stats_response"
         default:
           description: Generic Error
           schema:
